--- a/frontend/src/pages/ChatPage/ChatPage.module.css
+++ b/frontend/src/pages/ChatPage/ChatPage.module.css
@@ -75,7 +75,7 @@
     flex-direction: column;
     width: 100%;
     max-width: none;
-    height: 700px;
+    height: 85vh;
     border-radius: 0 0 12px 12px;
     overflow-y: auto;
     overflow: hidden; 
@@ -87,7 +87,7 @@
   .messages-wrapper {
     flex: 1;
     overflow-y: auto;
-    padding: 24px 16px 16px 16px;
+    padding: 0 16px 0;
     background: transparent;
     display: flex;
     flex-direction: column;
@@ -97,7 +97,7 @@
   
   .messages {
     flex-grow: 1;
-    padding: 24px 16px 16px 16px;
+    padding: 0 16px 0;
     background: transparent;
     display: flex;
     flex-direction: column;
